func_str.result, func_str.test:   Adding test case. item_strfunc.cc:   bug#11728 string function LEFT, strange undocumented behaviour   Fixing LEFT and RIGHT return NULL if the second   argument is NULL.